Source code corrections: RuleCharacteristicsSerializer - assured correct serialization of value of confirmation measure L if equal to Double.POSITIVE_INFINITY; RulesResource - removed warning.